# mitocheck_data

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  mitocheck_data_env.yml  pyproject.toml
0.download_data/: 0.download_env.yml  0.download_training_movies.sh  README.md  aspera_training_downloader.ipynb  aspera_training_downloader.py  training_locations.tsv
0.locate_data/: README.md  locate_data.ipynb  locate_data.py  locate_data.sh  locate_data_new.ipynb  locate_utils.py  training_locations.tsv
1.idr_streams/: README.md  idr_streams.sh  merge_features.ipynb
1.preprocess_data/: 1.preprocess_env.yml  1.preprocess_training_movies.sh  README.md  preprocess_training_data.ipynb  preprocess_training_data.py  training_frames.tsv
2.format_training_data/: README.md  format_training_data.ipynb  format_training_data.sh  training_data.ipynb
2.segment_nuclei/: 2.segment_env.yml  2.segment_training_nuclei.sh  README.md  segment_training_data.ipynb  segment_training_data.py
3.extract_features/: 2.feature_extraction_env.yml  3.compile_deepprof__training_proj.sh  3.feature_extraction_env.yml  README.md  compile_deepprof_training_proj.ipynb  compile_deepprof_training_proj.py
3.normalize_data/: README.md  normalize_data.ipynb  normalize_data.py  normalize_data.sh
4.analyze_data/: README.md  analyze_data.ipynb  analyze_data.py  analyze_data.sh
4.preprocess_features/: 4.preprocess_features_env.yml  4.preprocess_training_features.ipynb  4.preprocess_training_features.py  4.preprocess_training_features.sh  README.md
5.data_packaging/: Dockerfile.bfconvert  (+5 more)
(+246 files in other folders)
